compiler/testData/diagnostics/tests/subtyping/extensionOnLocalClasses.kt
package foo.bar

fun test() {
    class A {
        inner class B
    }

    fun <!UNRESOLVED_REFERENCE!>A.B<!>.foo() {}
}
